Added ALL OG PROPS

--- a/configs/TFS/PropMenu.cfg
+++ b/configs/TFS/PropMenu.cfg
@@ -1,11 +1,213 @@
 "TFS"
 {
-	"Test Props"
+	"Construction Props"
 	{
-		"title"				"Test Props"
+		"title"				"Construction Props"
 		"items"
 		{
 			"models/props_2fort/miningcrate002.mdl"		"Small Crate"
+			"models/props_lakeside/wood_crate_01.mdl"	"Large Crate"
+			"models/props_trainyard/stairs001b.mdl"	"Stairs"
+			"models/props_trainyard/crane_platform001.mdl"	"Platform"
+			"models/props_mining/support_wall001a.mdl"	"Wooden Wall"
+			"models/props_vehicles/train_flatcar_container.mdl"	"Container"
+			"models/props_vehicles/train_flatcar_container_01b.mdl"	"Open Container"
+			"models/props_farm/concrete_block001.mdl"	"Concrete Block"
+			"models/props_hydro/water_barrel.mdl"	"Blue Barrel"
+			"models/props_badlands/barrel01.mdl"	"Yellow Barrel"
+			"models/props_hydro/barrel_crate.mdl"	"Hydro Crate"
+			"models/props_hydro/barrel_crate_half.mdl"	"Hydro Half Crate"
+		}
+	}
+	"Siding Props"
+	{
+		"title"				"Siding Props"
+		"items"
+		{
+			"models/props_gameplay/security_fence_section01.mdl"	"Small Chainlink Fence"
+			"models/props_gameplay/security_fence256_gate01.mdl"	"Large Chainlink Fence"
+			"models/props_mining/fence001_reference.mdl"	"Wood Fence"
+			"models/props_spytech/spytech_railing02.mdl"	"Spytech Fence"
+			"models/props_spytech/doorframe005c.mdl"	"Small Door Frame"
+			"models/props_spytech/doorframe005d.mdl"	"Large Door Frame"
+			"models/props_forest/windowframe001.mdl"	"Small Window"
+			"models/props_2fort/blue_window001.mdl"	"Large Window"
+			"models/props_farm/vent001.mdl"	"Air Vent"
+			"models/props_soho/metalroof001.mdl"	"Metal Barrier"
+			"models/props_hydro/metal_barrier02.mdl"	"Slanted Metal Barrier"
+		}
+	}
+	"Decorative Props"
+	{
+		"title"				"Decorative Props"
+		"items"
+		{
+			"models/props_spytech/work_table001.mdl"	"Table"
+			"models/props_spytech/chair.mdl"	"Desk Chair"
+			"models/props_spytech/terminal_chair.mdl"	"Terminal Chair"
+			"models/props_spytech/corkboard01.mdl"	"Corkboard"
+			"models/props_gameplay/uniform_locker.mdl"	"Uniform Locker"
+			"models/props_2fort/tire002.mdl"	"Tire Stack"
+			"models/props_2fort/oildrum.mdl"	"Oil Drum"
+			"models/props_gameplay/orange_cone001.mdl"	"Traffic Cone"
+			"models/props_farm/concrete_pipe001.mdl"	"Concrete Pipe"
+			"models/props_mvm/mvm_sign_arrow.mdl"	"Arrow Sign"
+			"models/props_spytech/exit_mounted.mdl"	"Exit Sign"
+			"models/props_gameplay/sign_wood_cap002.mdl"	"Capture Sign"
+			"models/props_spytech/tv001.mdl"	"TV"
+			"models/props_hydro/dumptruck.mdl"	"Truck"
+			"models/props_spytech/control_room_console03.mdl"	"Computer Terminal"
+			"models/props_well/computer_cart02.mdl"	"Computer Cart"
+			"models/props_gameplay/cap_point_base.mdl"	"Control Point"
+			"models/props_spytech/watercooler.mdl"	"Water Cooler"
+			"models/props_farm/spawnroom_door_right.mdl"	"Wooden Door"
+		}
+	}
+	"Foliage Props"
+	{
+		"title"				"Foliage Props"
+		"items"
+		{
+			"models/props_foliage/tree_pine_extrasmall.mdl"	"Pine Tree"
+			"models/props_foliage/tree_pine_extrasmall_snow.mdl"	"Snowy Pine Tree"
+			"models/props_foliage/cactus01.mdl"	"Cactus"
+			"models/egypt/palm_tree/palm_tree.mdl"	"Palm Tree"
+			"models/props_manor/oak_01a.mdl"	"Oak Tree"
+			"models/props_manor/oak_01.mdl"	"Dead Oak Tree"
+			"models/harvest/tree/tree_small.mdl"	"Harvest Tree"
+			"models/harvest/pumpkin/pumpkin_big.mdl"	"Pumpkin"
+			"models/props_forest/tree_pine_stump02.mdl"	"Small Stump"
+			"models/props_forest/tree_pine_stump01.mdl"	"Large Stump"
+			"models/props_forest/tree_pine_singlelog.mdl"	"Pine Log"
+			"models/props_forest/tree_pine_stackedlogs.mdl"	"Stacked Pine Logs"
+			"models/props_mining/rock002.mdl"	"Red Rock"
+			"models/props_forest/rock003.mdl"	"Gray Rock"
+		}
+	}
+	"2Fort Props"
+	{
+		"title"				"2Fort Props"
+		"items"
+		{
+			"models/props_2fort/hose001.mdl"	"Hose"
+			"models/props_gameplay/towel_rack.mdl"	"Towel Rack"
+			"models/props_2fort/mop_and_bucket.mdl"	"Mop and Bucket"
+			"models/props_2fort/milkjug001.mdl"	"Milk Jug"
+			"models/props_2fort/fire_extinguisher.mdl"	"Fire Extinguisher"
+			"models/props_2fort/coffeemachine.mdl"	"Coffee Machine"
+			"models/props_2fort/coffeepot.mdl"	"Coffee Pot"
+			"models/props_2fort/sink001.mdl"	"Standing Sink"
+			"models/props_2fort/locker001.mdl"	"Metal Locker"
+			"models/props_2fort/wastebasket01.mdl"	"Waste Bucket"
+			"models/props_2fort/chalkboard01.mdl"	"Chalkboard"
+			"models/props_2fort/wagonwheel001.mdl"	"Wagon Wheel"
+			"models/props_2fort/trainwheel002.mdl"	"Train Wheel Stack"
+			"models/props_2fort/tank001.mdl"	"Red Tank"
+			"models/props_2fort/tank002.mdl"	"White Tank"
+			"models/props_2fort/tracks001.mdl"	"Cart Track"
+			"models/props_2fort/telephonepole001.mdl"	"Telephone Pole"
+			"models/props_2fort/ladder001.mdl"	"Ladder"
+			"models/props_spytech/bench001a.mdl"	"Small Bench"
+			"models/props_spytech/bench001b.mdl"	"Large Bench"
+		}
+	}
+	"Manor Props"
+	{
+		"title"				"Manor Props"
+		"items"
+		{
+			"models/props_manor/ornate_rug_01.mdl"	"Ornate Rug"
+			"models/props_manor/baby_grand_01.mdl"	"Baby Grand Piano"
+			"models/props_manor/bookcase_132_02.mdl"	"Bookcase"
+			"models/props_manor/couch_01.mdl"	"Fluffy Couch"
+			"models/props_manor/chair_01.mdl"	"Fluffy Chair"
+			"models/props_manor/scarecrow_01.mdl"	"Scarecrow"
+			"models/props_manor/fireplace_01.mdl"	"Rock Fireplace"
+			"models/props_manor/tractor_01.mdl"	"Tractor"
+			"models/props_manor/trailer_01.mdl"	"Tractor Trailer"
+			"models/props_manor/portrait_01.mdl"	"Portrait"
+			"models/props_manor/painting_07.mdl"	"Painting"
+			"models/props_manor/curtains_02.mdl"	"Curtains"
+			"models/props_manor/coffin_01.mdl"	"Coffin"
+			"models/props_manor/cardboard_box_set_02.mdl"	"Cardboard Boxes"
+			"models/props_manor/table_02.mdl"	"Bedside Table"
+			"models/props_manor/vase_01.mdl"	"Clay Vase"
+			"models/props_halloween/jackolantern_02.mdl"	"Lantern"
+			"models/props_manor/gravestone_07.mdl"	"Gravestone"
+			"models/props_manor/gate_statue.mdl"	"Gargoyle Stand"
+			"models/props_manor/gargoyle_01.mdl"	"Gargoyle Statue"
+		}
+	}
+	"Egypt Props"
+	{
+		"title"				"Egypt Props"
+		"items"
+		{
+			"models/egypt/tent/tent.mdl"	"Small Tent"
+			"models/egypt/pyramid/pyramid_small.mdl"	"Pyramid"
+			"models/egypt/pillar/pillar.mdl"	"Small Pillar"
+			"models/egypt/stick_torch/stick_torch.mdl"	"Small Standing Torch"
+			"models/egypt/stick_torch/stick_torch_big.mdl"	"Large Standing Torch"
+			"models/egypt/wall_torch/wall_torch.mdl"	"Wall Torch"
+		}
+	}
+	"Soho Props"
+	{
+		"title"				"Soho Props"
+		"items"
+		{
+			"models/props_soho/trashbag001.mdl"	"Trashbag"
+			"models/props_soho/sign008.mdl"	"Horizontal Sign"
+			"models/props_soho/sign007.mdl"	"Verticle Sign"
+			"models/props_soho/sign005.mdl"	"Circle Sign"
+			"models/props_soho/sign003b.mdl"	"Rocket Noodle Sign"
+			"models/props_soho/securityfence001.mdl"	"Barricade Fence"
+			"models/props_soho/bus001.mdl"	"Double-Decker Bus"
+			"models/props_soho/bottlecrate001.mdl"	"Bottle Crate"
+			"models/props_soho/bookstand002.mdl"	"Small Newstand"
+			"models/props_soho/bookstand001.mdl"	"Large Newstand"
+			"models/props_soho/awning003_128.mdl"	"Metal Awning"
+			"models/props_soho/acunit002b.mdl"	"AC Unit"
+		}
+	}
+	"Well Props"
+	{
+		"title"				"Well Props"
+		"items"
+		{
+			"models/props_trainyard/train_signal002.mdl"	"Train Signal"
+			"models/props_trainyard/portable_stairs001.mdl"	"Portable Stairs"
+			"models/props_trainyard/distillery_barrel001.mdl"	"Distillery Barrel"
+			"models/props_trainyard/beer_keg001.mdl"	"Beer Keg"
+			"models/props_farm/awning002.mdl"	"Awning"
+			"models/props_vehicles/train_engine.mdl"	"Train Engine"
+			"models/props_vehicles/train_flatcar.mdl"	"Flatcar"
+			"models/props_well/hand_truck01.mdl"	"Hand Truck"
+			"models/props_well/brewing_vat.mdl"	"Brewing Vat"
+			"models/props_hydro/water_machinery4.mdl"	"Water Vats"
+			"models/props_hydro/wall_map.mdl"	"Wall Map"
+			"models/props_trainyard/train_gate001b.mdl"	"Train Gate"
+			"models/props_forest/train_stop.mdl"	"Trainstop"
+			"models/props_farm/welding_machine01.mdl"	"Generator"
+			"models/ambulance.mdl"	"Ambulance"
+		}
+	}
+	"Degroot Props"
+	{
+		"title"				"Degroot Props"
+		"items"
+		{
+			"models/props_medieval/portcullis_small.mdl"	"Small Portcullis"
+			"models/props_medieval/portcullis.mdl"	"Large Portcullis"
+			"models/props_medieval/fort_wall_short.mdl"	"Small Logwall"
+			"models/props_medieval/fort_wall.mdl"	"Large Logwall"
+			"models/props_medieval/training_dummy.mdl"	"Training Dummy"
+			"models/props_medieval/target/target.mdl"	"Target"
+			"models/props_medieval/sign/sign.mdl"	"Medieval Sign"
+			"models/props_medieval/bar_bench.mdl"	"Bar Bench"
+			"models/props_medieval/bar_table.mdl"	"Bar Table"
+			"models/props_medieval/anvil.mdl"	"Anvil"
+			"models/props_medieval/brazier.mdl"	"Brazier"
 		}
 	}
 }
